@@ -4,13 +4,13 @@ import com.example.School_App.SchoolApp.Repository.EnrollmentRepository;
 import com.example.School_App.SchoolApp.SchoolAppDto.CourseDto;
 import com.example.School_App.SchoolApp.SchoolAppDto.EnrollmentDto;
 import com.example.School_App.SchoolApp.SchoolAppDto.StudentDto;
-import jakarta.transaction.Transactional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
+
 
 @SpringBootTest
 class EnrollmentServiceTest {
@@ -28,25 +28,26 @@ class EnrollmentServiceTest {
     @Test
     void testToEnrollStudentInACourse() {
         List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1")));
-        List<CourseDto> savedCourse = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
-           enrollmentService.enrollStudentInCourse(savedStudent.get(0).getStudentId(), savedCourse.get(0).getCourseId());
+           enrollmentService.enrollStudentInCourse(savedStudent.getFirst().getStudentId(), savedCourse.getFirst().getCourseId());
+
           List<EnrollmentDto> enrollments = enrollmentService.getAllEnrollment();
            assertNotNull(enrollments);
            assertEquals(1, enrollments.size());
-           assertEquals(1, enrollments.get(0).getStudentId());
-           assertEquals(1, enrollments.get(0).getCourseId());
-           assertEquals(1, enrollments.get(0).getEnrollmentId());
+           assertEquals(1, enrollments.getFirst().getStudentId());
+           assertEquals(1, enrollments.getFirst().getCourseId());
+           assertEquals(1, enrollments.getFirst().getEnrollmentId());
 
     }
 
     @Test
     void testToGetAllCourseForAStudent(){
         List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1")));
-        List<CourseDto> savedCourse = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
         List <StudentDto> students = studentService.saveAllStudents(List.of(new StudentDto("yahaya", "yahaya@gmail.com", "ss1")));
-        List<CourseDto> courses = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> courses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
         EnrollmentDto enrollmentDto = new EnrollmentDto();
         enrollmentDto.setCourseId(savedCourse.getFirst().getCourseId());
@@ -57,7 +58,7 @@ class EnrollmentServiceTest {
         enrollmentDto1.setStudentId(students.getLast().getStudentId());
 
         List<EnrollmentDto> enrollmentDtoList = enrollmentService.saveAllEnrollments(List.of(enrollmentDto, enrollmentDto1));
-        List<EnrollmentDto> result = enrollmentService.getCourseByStudent(enrollmentDtoList.get(0).getStudentId());
+        List<EnrollmentDto> result = enrollmentService.getCourseByStudent(enrollmentDtoList.getFirst().getStudentId());
         assertNotNull(result);
         assertEquals(2, enrollmentDtoList.size());
         assertEquals(1, result.getFirst().getCourseId());
@@ -66,10 +67,10 @@ class EnrollmentServiceTest {
     @Test
     void testToGetAllStudentByACourse(){
         List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1")));
-        List<CourseDto> savedCourse = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
         List <StudentDto> students = studentService.saveAllStudents(List.of(new StudentDto("yahaya", "yahaya@gmail.com", "ss1")));
-        List<CourseDto> courses = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> courses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
         EnrollmentDto enrollmentDto = new EnrollmentDto();
         enrollmentDto.setCourseId(savedCourse.getFirst().getCourseId());
@@ -80,7 +81,7 @@ class EnrollmentServiceTest {
         enrollmentDto1.setCourseId(courses.getLast().getCourseId());
 
         List<EnrollmentDto> enrollmentDtoList = enrollmentService.saveAllEnrollments(List.of(enrollmentDto, enrollmentDto1));
-        List<EnrollmentDto> result = enrollmentService.getStudentsByACourse(enrollmentDtoList.get(0).getCourseId());
+        List<EnrollmentDto> result = enrollmentService.getStudentsByACourse(enrollmentDtoList.getFirst().getCourseId());
         assertNotNull(result);
         assertEquals(2, enrollmentDtoList.size());
         assertEquals(1, result.getFirst().getStudentId());
@@ -90,10 +91,10 @@ class EnrollmentServiceTest {
     @Test
     void testToGetAllEnrollment(){
         List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1")));
-        List<CourseDto> savedCourse = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
         List <StudentDto> students = studentService.saveAllStudents(List.of(new StudentDto("yahaya", "yahaya@gmail.com", "ss1")));
-        List<CourseDto> courses = courseService.saveAllCoursesFromDto(List.of(new CourseDto("physics", "phy101")));
+        List<CourseDto> courses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
 
         EnrollmentDto enrollmentDto = new EnrollmentDto();
         enrollmentDto.setCourseId(savedCourse.getFirst().getCourseId());
